Update product service

--- a/.env
+++ b/.env
@@ -1,4 +1,16 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/productdb
+# # localhost
+
+# MONGODB_URI=mongodb://127.0.0.1:27017/productdb
+# JWT_SECRET=This_is_My_Highly_Encripted_Password
+# PORT=8081
+# BASEURL=http://localhost:8082/api/
+
+
+# docker
+
+MONGODB_URI=mongodb://mongo:27017/productdb
 JWT_SECRET=This_is_My_Highly_Encripted_Password
 PORT=8081
-BASEURL=http://localhost:8082/api/
+BASEURL=http://category-service:8082/api/
+MEDIA_SERVICE_URL=http://media-service:8088
+
